--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,10 @@ body {
   color: #FF3F81;
 }
 
+.site-nav {
+  position: relative;
+}
+
 .site-nav__list {
   display: none;
 }
@@ -156,10 +160,15 @@ body {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav__item:hover, .site-nav__item:focus {
+.site-nav__item:hover, .site-nav__item:focus, .site-nav__item.active {
   color: #FF3F81;
   cursor: pointer;
   transform: scale(1.2);
+}
+
+.site-nav__link {
+  color: inherit;
+  text-transform: uppercase;
 }
 
 .burger {
@@ -171,10 +180,6 @@ body {
   .burger {
     display: none;
   }
-}
-
-.site-nav__link {
-  color: inherit;
 }
 
 .site-contacts {
@@ -326,9 +331,21 @@ body {
   width: 100%;
   height: 200px;
   margin-bottom: 40px;
+  object-fit: cover;
 }
 
 .aboutMe__text {
+  margin-bottom: 10px;
+}
+
+.aboutMe__card {
+  display: block;
+  padding: 10px 5px;
+  border-radius: 5px;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+
+.aboutMe__card:not(:last-child) {
   margin-bottom: 10px;
 }
 
