--- a/sass/components/_aboutMe.scss
+++ b/sass/components/_aboutMe.scss
@@ -11,10 +11,25 @@
   width: 100%;
   height: 200px;
   margin-bottom: 40px;
+  object-fit: cover;
 }
 
 .aboutMe__text {
+  // height: 500px;
+  // overflow: scroll;
   margin-bottom: 10px;
+}
+
+.aboutMe__card {
+  display: block;
+  padding: 10px 5px;
+
+  border-radius: 5px;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .aboutMe__resumeLink {
@@ -24,14 +39,11 @@
   padding: 10px 20px;
   color: $color-white;
   font-size: 18px;
-  
 
   background-color: $color-dark-transparent;
   border-radius: 10px;
   transition: $timing-function;
   box-shadow: 10px 15px 25px rgba(232, 183, 183, 0.45);
-
-
 
   &:hover,
   &:focus {
