--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.site-nav{
+  position: relative;
+}
+
 .site-nav__list {
   display: none;
 
@@ -33,12 +37,19 @@
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus {
+  &:focus,
+  &.active {
     color: $color-pink;
     cursor: pointer;
     transform: scale(1.2);
   }
 }
+
+.site-nav__link {
+  color: inherit;
+  text-transform: uppercase;
+}
+
 
 .burger {
     display: inline-block;
@@ -49,9 +60,7 @@ margin: 0 8px 0 80px;
 }
 }
 
-.site-nav__link {
-  color: inherit;
-}
+
 
 .site-contacts {
   color: $color-white;
