--- a/css/main.css
+++ b/css/main.css
@@ -59,11 +59,11 @@ a {
 }
 
 body {
-  color: #23153C;
-  font-family: "DM Sans", sans-serif;
-  font-weight: 500;
+  color: #23153c;
+  font-family: "Rubik", sans-serif;
+  font-weight: 200;
   font-size: 16px;
-  letter-spacing: 1.6;
+  letter-spacing: 1.2px;
   line-height: 21.94px;
 }
 
@@ -99,7 +99,7 @@ body {
   padding: 0 12px;
   max-width: 200px;
   min-height: 24px;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 8px;
   line-height: 1.2;
   letter-spacing: 0.06em;
@@ -123,20 +123,21 @@ body {
 .page-header {
   position: fixed;
   z-index: 100;
+  font-weight: 400;
   width: 100%;
   background-color: rgba(35, 21, 60, 0.9);
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .logo {
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 38px;
   padding: 36px 0;
   margin-right: 55px;
 }
 
 .logo__acent {
-  color: #FF3F81;
+  color: #ff3f81;
 }
 
 .site-nav {
@@ -156,12 +157,12 @@ body {
 .site-nav__item {
   margin-right: 25px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: #FFFFFF;
+  color: #ffffff;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav__item:hover, .site-nav__item:focus, .site-nav__item.active {
-  color: #FF3F81;
+  color: #ff3f81;
   cursor: pointer;
   transform: scale(1.2);
 }
@@ -183,7 +184,7 @@ body {
 }
 
 .site-contacts {
-  color: #FFFFFF;
+  color: #ffffff;
   margin-left: auto;
 }
 
@@ -198,19 +199,19 @@ body {
 }
 
 .site-contacts__icon {
-  fill: #FFFFFF;
+  fill: #ffffff;
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-contacts__icon:hover {
-  fill: #FF3F81;
+  fill: #ff3f81;
 }
 
 .intro {
   min-width: 320px;
   height: 100vh;
-  background-color: #23153C;
+  background-color: #23153c;
 }
 
 .hero {
@@ -230,7 +231,7 @@ body {
 }
 
 .hero__title {
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: 900;
   font-size: 48px;
   line-height: 1.62;
@@ -238,7 +239,7 @@ body {
 }
 
 .hero__text {
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 18px;
   line-height: 1.62;
   letter-spacing: 0.06em;
@@ -255,10 +256,10 @@ body {
   display: inline-flex;
   font-family: monospace;
   width: 22ch;
-  color: #FF3F81;
+  color: #ff3f81;
   font-weight: 900;
   font-size: 22px;
-  border-right: 3px solid #FFFFFF;
+  border-right: 3px solid #ffffff;
   white-space: nowrap;
   overflow: hidden;
   animation: flashing-border 0.5s step-start infinite, printed-text-start 2.5s steps(21) 1;
@@ -266,13 +267,13 @@ body {
 
 @keyframes flashing-border {
   0% {
-    border-color: #FFFFFF;
+    border-color: #ffffff;
   }
   50% {
     border-color: transparent;
   }
   100% {
-    border-color: #FFFFFF;
+    border-color: #ffffff;
   }
 }
 
@@ -319,8 +320,8 @@ body {
 }
 
 .aboutMe {
-  padding: 50px 0;
-  background: linear-gradient(#FFFFFF 30%, #FF3F81);
+  padding: 120px 0;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.01), white 85%), radial-gradient(ellipse at top left, rgba(214, 51, 132, 0.5), transparent 50%), radial-gradient(ellipse at top right, rgba(255, 228, 132, 0.5), transparent 50%), radial-gradient(ellipse at center right, rgba(255, 228, 132, 0.5), transparent 50%), radial-gradient(ellipse at center left, rgba(13, 110, 253, 0.5), transparent 50%);
 }
 
 .aboutMe__box {
@@ -336,29 +337,26 @@ body {
 }
 
 .aboutMe__text {
-  margin-bottom: 10px;
-  font-size: 21px;
-  background: linear-gradient(#FFFFFF 10%, #FF3F81);
+  font-size: 18px;
+}
+
+.aboutMe__card {
+  padding: 12px 20px;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(5px);
 }
 
-.aboutMe__card {
-  background-color: grey;
-  padding: 10px 0;
-}
-
-.aboutMe__card:nth-child(odd) {
-  color: #FF3F81;
+.aboutMe__card:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .aboutMe__resumeLink {
   display: inline-flex;
   width: 145px;
   padding: 10px 20px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 18px;
   background-color: rgba(35, 21, 60, 0.9);
   border-radius: 10px;
@@ -367,11 +365,11 @@ body {
 }
 
 .aboutMe__resumeLink:hover, .aboutMe__resumeLink:focus {
-  background-color: #FF3F81;
+  background-color: #ff3f81;
 }
 
 .section-stady {
-  padding: 28px 0;
+  padding: 20px 0;
 }
 
 .stady__box {
@@ -522,7 +520,7 @@ body {
 }
 
 .portfolio-section {
-  padding: 28px 0;
+  padding: 120px 0;
 }
 
 .portfolio__item {
@@ -573,8 +571,8 @@ body {
   top: -20px;
   right: -10px;
   padding: 5px 10px;
-  color: #FFFFFF;
-  background-color: #FF3F81;
+  color: #ffffff;
+  background-color: #ff3f81;
   opacity: 0.8;
 }
 
@@ -622,7 +620,7 @@ body {
 }
 
 .portfolio__link-api:hover {
-  color: #FF3F81;
+  color: #ff3f81;
 }
 
 .portfolio__link-play--mini {
@@ -674,7 +672,7 @@ body {
 }
 
 .portfolio__button:hover {
-  color: #FF3F81;
+  color: #ff3f81;
   cursor: pointer;
   transform: scale(1.2);
 }
@@ -710,8 +708,8 @@ body {
 }
 
 .page-footer {
-  background-color: #23153C;
-  color: #FFFFFF;
+  background-color: #23153c;
+  color: #ffffff;
   padding: 28px 0;
 }
 
@@ -739,12 +737,12 @@ body {
 }
 
 .social-item__icon {
-  fill: #FFFFFF;
+  fill: #ffffff;
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-item__icon:hover {
-  fill: #FF3F81;
+  fill: #ff3f81;
 }
 /*# sourceMappingURL=main.css.map */
