--- a/sass/components/_aboutMe.scss
+++ b/sass/components/_aboutMe.scss
@@ -1,7 +1,31 @@
 .aboutMe {
-  padding: 50px 0;
+  padding: 120px 0;
 
-  background: linear-gradient($color-white 30%, $color-pink);
+  background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.01),
+      rgba(255, 255, 255, 1) 85%
+    ),
+    radial-gradient(
+      ellipse at top left,
+      rgba(214, 51, 132, 0.5),
+      transparent 50%
+    ),
+    radial-gradient(
+      ellipse at top right,
+      rgba(255, 228, 132, 0.5),
+      transparent 50%
+    ),
+    radial-gradient(
+      ellipse at center right,
+      rgba(255, 228, 132, 0.5),
+      transparent 50%
+    ),
+    radial-gradient(
+      ellipse at center left,
+      rgba(13, 110, 253, 0.5),
+      transparent 50%
+    );
 }
 
 .aboutMe__box {
@@ -19,38 +43,28 @@
 .aboutMe__text {
   // height: 500px;
   // overflow: scroll;
-  margin-bottom: 10px;
-  font-size: 21px;
-  background: linear-gradient($color-white 10%, $color-pink);
-
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, .15);
-  
-    backdrop-filter: blur(5px);
+  font-size: 18px;
  
+  
 }
 
 .aboutMe__card {
-  background-color: grey;
-    padding: 10px 0;
+  padding: 12px 20px;
 
-  &:nth-child(odd) {
-      color: $color-pink;
-    }
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.15);
+
+  backdrop-filter: blur(5px);
+
+  // &:nth-child(odd) {
+  //   color: $color-pink;
+  // }
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
-
-// .aboutMe__card {
-//   display: block;
-//   padding: 10px 5px;
-
-//   border-radius: 5px;
-//   box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-
-//   &:not(:last-child) {
-//     margin-bottom: 10px;
-//   }
-// }
 
 .aboutMe__resumeLink {
   display: inline-flex;
