--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,9 @@
 .page-header {
   position: fixed;
   z-index: 100;
+
+  font-weight: 400;
+  
   width: 100%;
   background-color: $color-dark-transparent;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
