--- a/sass/units/_vars.scss
+++ b/sass/units/_vars.scss
@@ -1,40 +1,41 @@
 //  Colors
-$color-pink: #FF3F81;
-$color-white: #FFFFFF;
+$color-pink: #ff3f81;
+$color-white: #ffffff;
 $color-white-transparent: rgba(255, 255, 255, 0.3);
-$color-dark: #23153C;
+$color-dark: #23153c;
 $color-dark-transparent: rgba(35, 21, 60, 0.9);
 
 //  Cubic for transition
 $timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 //  Font
-$font-primery: 'DM Sans', sans-serif;
+$font-primery: 'Rubik',
+sans-serif;
+// $font-primery: 'DM Sans', sans-serif;
 // $font-title: 'Titan One', cursive;
 
 // Break points
 $mobile: 380px;
-$to-tablet:787px;
+$to-tablet: 787px;
 $tablet: 768px;
 $to-desctop: 1279px;
 $desctop: 1280px;
 
-
 // Base style
 html {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
 *::after,
 *::before {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 ul,
 ol {
-    padding: 0;
+  padding: 0;
 }
 
 body,
@@ -53,40 +54,40 @@ figcaption,
 blockquote,
 dl,
 dd {
-    margin: 0;
+  margin: 0;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    max-width: 100%;
-    display: block;
+  max-width: 100%;
+  display: block;
 }
 
 input,
 button,
 textarea,
 select {
-    font: inherit;
+  font: inherit;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    color: $color-dark;
-    font-family: $font-primery;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: 1.6;
-    line-height: 21.94px;
+  color: $color-dark;
+  font-family: $font-primery;
+  font-weight: 200;
+  font-size: 16px;
+letter-spacing: 1.2px;
+  line-height: 21.94px;
 }
 
 // body.modal-open {
@@ -94,52 +95,52 @@ body {
 // }
 
 .container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: $mobile;
+  padding: 0 12px;
+  margin: 0 auto;
+
+  @media screen and (min-width: $tablet) {
+    max-width: $tablet;
+  }
+
+  @media screen and (min-width: $desctop) {
+    max-width: $desctop;
+    padding: 0 32px;
+  }
+
+  &.column {
+    flex-direction: column;
     justify-content: center;
-    min-width: $mobile;
-    padding: 0 12px;
-    margin: 0 auto;
-
-    @media screen and (min-width: $tablet) {
-        max-width: $tablet;
-    }
-
-    @media screen and (min-width: $desctop) {
-        max-width: $desctop;
-        padding: 0 32px;
-    }
-
-    &.column {
-        flex-direction: column;
-justify-content: center;
-align-items: center;
-    }
+    align-items: center;
+  }
 }
 
 .btn {
-    padding: 0 12px;
-    max-width: 200px;
-    min-height: 24px;
+  padding: 0 12px;
+  max-width: 200px;
+  min-height: 24px;
 
-    font-family: $font-primery;
-    font-size: 8px;
-    line-height: 1.2;
-    letter-spacing: 0.06em;
-    border-radius: 20px;
-    border: none;
+  font-family: $font-primery;
+  font-size: 8px;
+  line-height: 1.2;
+  letter-spacing: 0.06em;
+  border-radius: 20px;
+  border: none;
 }
 
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
